# gcpsql

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: cli.rs  exec.rs  gcp_sql_proxy.rs  main.rs  net.rs  psql.rs
