[package]
name = "gcpsql"
version = "0.1.0"
edition = "2024"
authors = ["Adaline Simonian <adalinesimonian@pm.me>"]
license = "ISC"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
rand = "0.9"
tokio = { version = "1.48", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "signal",
    "time",
    "net",
] }
nix = { version = "0.30", default-features = false, features = ["signal"] }
url = "2.5"
